syntax = "proto3";

package protobuf;
option go_package = "./protobuf";

import "google/protobuf/timestamp.proto";
import "role.proto";

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User data = 1;
}

service UserService {
  // Test 测试方法
  rpc Get(GetUserRequest) returns (GetUserResponse) {};
}

// 用户
message User {
  int64 id = 1;
  string name = 2;
  float weight = 3;
  bool hasSuper = 4;

  UserStatus status = 5;

  Role role = 6;

  User createdBy = 7;

  repeated string menuList = 8;

  map<string, string> customConfig = 9;

  google.protobuf.Timestamp createdTime = 10;
}

// 枚举状态
enum UserStatus {
  UNKNOWN = 0;
  ENABLE = 1;
  DISABLE = 2;
}
